fin page projet naturalisation

--- a/src/main/webapp/scripts/app/account/login/login.html
+++ b/src/main/webapp/scripts/app/account/login/login.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     	<h4 translate="login.title">Authentication</h4>
     </div>
     <br><br>
