--- a/src/main/webapp/scripts/app/usager/account/infos/infos.html
+++ b/src/main/webapp/scripts/app/usager/account/infos/infos.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     		<h4 translate="infos.title">Request for a student stay</h4>
    		</div>
     </div>
