--- a/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     	<h4 translate="renouveler.title">Request for a renewal</h4>
     </div>
     <br>
