--- a/src/main/webapp/scripts/app/application/address/address.html
+++ b/src/main/webapp/scripts/app/application/address/address.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     	<h4 translate="procedure.title">Title</h4>
     </div>
     <br>
@@ -119,8 +119,7 @@
 		        </div>
 		        <div class="form-group">
 		            <label translate="address.form.contactType" for="field_contactType">ContactType</label>
-		            <span class="glyphicon glyphicon-info-sign form-info" id="contactType-info"
-				    			tabindex="0" data-placement="right" data-toggle="popover" data-trigger="hover" data-content="{{'address.form.contactType.tooltip' | translate}}"></span>
+		            <tooltip tooltip-text='address.form.contactType.tooltip'></tooltip>
 
 			        <div class="checkbox" ng-repeat="contactType in contactTypeValues">
 				        <label><input type="checkbox" id="field_contactType_{{contactType.value}}" name="contactType_{{contactType.value}}" 
@@ -149,10 +148,6 @@
     
 <script type="text/javascript">
 	$("html, body").animate({ scrollTop: 0 }, "slow");
-	
-	$(function () {
-		$('#contactType-info').popover();
-	})
 </script>
     
 <script type="text/javascript" ng-if="isRenewal">
