--- a/src/main/webapp/scripts/app/application/final/final.html
+++ b/src/main/webapp/scripts/app/application/final/final.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     	<h4 translate="procedure.title">Title</h4>
     </div>
     <br><br>
