--- a/src/main/webapp/scripts/app/usager/account/application/application.html
+++ b/src/main/webapp/scripts/app/usager/account/application/application.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     	<h4 translate="application.title"></h4>
     </div>
 	<br><br>
