refactor gestion document

--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -138,8 +138,8 @@
 		    <br>
 		    <div class="row">
 				<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
-				    <file-upload ng-model="identity.passport" input-group="identity" input-name="passport"></file-upload>
-				    <file-upload ng-model="identity.birthAct" input-group="identity" input-name="birthAct"></file-upload>
+				    <file-upload ng-model="identity.documents" doc-type="passport" translate-key="identity.form.passport"></file-upload>
+				    <file-upload ng-model="identity.documents" doc-type="birthAct" translate-key="identity.form.birthAct"></file-upload>
 			   	</div>
 			</div>
 		</div>
