--- a/src/main/webapp/scripts/app/application/project/project.html
+++ b/src/main/webapp/scripts/app/application/project/project.html
@@ -152,8 +152,8 @@
 	    <br>
 	    <div class="row">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
-			    <file-upload ng-model="project.inscriptionCertificate" input-group="project" input-name="inscriptionCertificate"></file-upload>
-			    <file-upload ng-model="project.resourceProof" input-group="project" input-name="resourceProof"></file-upload>
+				<file-upload ng-model="project.documents" doc-type="inscriptionCertificate" translate-key="project.form.inscriptionCertificate"></file-upload>
+				<file-upload ng-model="project.documents" doc-type="resourceProof" translate-key="project.form.resourceProof"></file-upload>
 		    </div>
 		</div>
 		<br><br>
