creation directive photoViewer

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,8 @@
     <script src="scripts/components/form/minbytes.directive.js"></script>
     <script src="scripts/components/form/pager.directive.js"></script>
     <script src="scripts/components/form/pagination.directive.js"></script>
+    <script src="scripts/components/form/photo.directive.js"></script>
+    <script src="scripts/components/form/fileupload.service.js"></script>
     <script src="scripts/components/admin/audits.service.js"></script>
     <script src="scripts/components/admin/logs.service.js"></script>
     <script src="scripts/components/admin/configuration.service.js"></script>
@@ -108,7 +110,6 @@
     <script src="scripts/components/country/country.service.js"></script>
     <script src="scripts/components/util/truncate.filter.js"></script>
     <script src="scripts/components/util/base64.service.js"></script>
-    <script src="scripts/components/util/fileupload.service.js"></script>
     <script src="scripts/components/alert/alert.service.js"></script>
     <script src="scripts/components/alert/alert.directive.js"></script>
     <script src="scripts/components/util/parse-links.service.js"></script>
